# tictactoe

./: .gitignore  README.md  setup.cfg
pototo/: o.txt  x.txt
src/tictactoe/: game.py  graphics.py  main.py
