[metadata]
name = tictactoe
version = 0.1.0
author = Michael S. Miller, Anusha Pai Asnodkar
author_email = michaelsmiller2@gmail.com
description = A fun series of tic-tac-toe implementations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michaelsmiller/tictactoe
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
  typing_extensions
  numpy
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
